Traducciones portlet Grid events

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -190,6 +190,9 @@ msgstr "Aquest portlet mostra esdeveniments recents."
 msgid "Més esdeveniments"
 msgstr "Més esdeveniments"
 
+msgid "a"
+msgstr ""
+
 #################
 # Control Panel #
 #################
