Literal cookies footer

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -736,7 +736,7 @@ msgstr "política de <em>cookies</em>"
 #. Default: "Aquest web utilitza cookies pròpies per oferir-li una millor experiència i servei. En continuar amb la navegació entenem que accepta la nostra"
 #: genweb.theme/genweb/theme/browser/viewlets_templates/footer.pt:11
 msgid "cookie_policy_this_site"
-msgstr "Aquest web utilitza <em>cookies</em> pròpies per oferir una millor experiència i servei. En continuar amb la navegació entenem que acceptes la nostra "
+msgstr "Aquest web utilitza <em>cookies</em> pròpies i de tercers per mesurar i gestionar visites al web així com per oferir una millor experiència i servei a partir dels hàbits de navegació dels usuaris. En continuar amb la navegació entenem que s'accepta la nostra "
 
 #. Default: "Create packet UPC at root"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:253
