--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -726,7 +726,7 @@ msgstr "cookies policy"
 #. Default: "Aquest web utilitza cookies pròpies per oferir-li una millor experiència i servei. En continuar amb la navegació entenem que accepta la nostra"
 #: genweb.theme/genweb/theme/browser/viewlets_templates/footer.pt:11
 msgid "cookie_policy_this_site"
-msgstr "This website uses cookies to offer you the best experience and service. If you continue browsing, it is understood that you accept our "
+msgstr "This website uses own and third party <em>cookies</em> to measure and manage visits to the website as well as to provide a better experience and service based on the browsing habits of users. By continuing to browse, we understand that our "
 
 #. Default: "Create packet UPC at root"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:253
