--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2179,7 +2179,7 @@ msgid "View type"
 msgstr "Tipus de vista"
 
 msgid "desc_privacy"
-msgstr "Les dades recollides es tractaran tal com es descriu a la <a href='https://upc.edu/ca/avis-legal/informacio-i-acces-a-les-dades-personals' target='_blank'>taula de informació i accés a les dades personals</a>"
+msgstr "Les dades recollides es tractaran tal com es descriu a la <a href='https://upc.edu/ca/avis-legal/informacio-i-acces-a-les-dades-personals' target='_blank'>taula d'informació i accés a les dades personals</a>"
 
 msgid "title_privacy"
 msgstr "Dono el meu consentiment a la UPC per al tractament de les dades de caràcter personal"
