--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2191,3 +2191,10 @@ msgstr "No teniu permisos suficients per a visualitzar aquesta pàgina. Si creie
 
 msgid "custom message"
 msgstr "Escull una opció"
+
+#########
+# Views #
+#########
+
+msgid "filtered_contents_search_pretty_view"
+msgstr "Vista filtre etiquetes"
