--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -2073,9 +2073,12 @@ msgstr "I consent to the UPC processing the personal data"
 msgid "custom message"
 msgstr "Choose an option"
 
+msgid "label_filters"
+msgstr "Filters"
+
 #########
 # Views #
 #########
 
 msgid "filtered_contents_search_pretty_view"
-msgstr "View filter tags"
+msgstr "View with filters"
