--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2192,9 +2192,12 @@ msgstr "No teniu permisos suficients per a visualitzar aquesta pàgina. Si creie
 msgid "custom message"
 msgstr "Escull una opció"
 
+msgid "label_filters"
+msgstr "Filtres"
+
 #########
 # Views #
 #########
 
 msgid "filtered_contents_search_pretty_view"
-msgstr "Vista filtre etiquetes"
+msgstr "Vista amb filtres"
