--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -745,6 +745,9 @@ msgstr "política de <em>cookies</em>"
 msgid "cookie_policy_this_site"
 msgstr "Esta web utiliza <em>cookies</em> propias y de terceros para medir y gestionar visitas a la web así como para ofrecer una mejor experiencia y servicio a partir de los hábitos de navegación de los usuarios. Al continuar con la navegación entendemos que acepta nuestra "
 
+msgid "cookie_policy_this_site_2"
+msgstr "."
+
 #. Default: "Create packet UPC at root"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:253
 msgid "create_packet"
