--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -721,12 +721,12 @@ msgstr "Disable UPCmaps"
 #. Default: "política de cookies"
 #: genweb.theme/genweb/theme/browser/viewlets_templates/footer.pt:14
 msgid "cookie_policy"
-msgstr "cookies policy"
+msgstr "Cookies policy"
 
 #. Default: "Aquest web utilitza cookies pròpies per oferir-li una millor experiència i servei. En continuar amb la navegació entenem que accepta la nostra"
 #: genweb.theme/genweb/theme/browser/viewlets_templates/footer.pt:11
 msgid "cookie_policy_this_site"
-msgstr "The website of the Polytechnic University of Catalonia uses its own and third-party cookies to improve the browsing experience and for statistical purposes. For more information on the use of cookies, see the <a href=\"https://genweb.upc.edu/en/cookie_policy\" target=\"_blank\"> Cookie Policy </a>."
+msgstr "The website of the Polytechnic University of Catalonia uses its own and third-party cookies to improve the browsing experience and for statistical purposes. For more information on the use of cookies, see the "
 
 msgid "cookie_policy_button1"
 msgstr "Accept"
