--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -2123,6 +2123,9 @@ msgstr "Escoge una opción"
 msgid "filtered_contents_search_pretty_view"
 msgstr "Vista con filtros"
 
+msgid "filtered_contents_search_complete_pretty_view"
+msgstr "Vista con filtros"
+
 
 ################
 # New contents #
