--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2207,7 +2207,7 @@ msgid "filtered_contents_search_pretty_view"
 msgstr "Vista amb filtres"
 
 msgid "filtered_contents_search_complete_pretty_view"
-msgstr "Vista amb filtres"
+msgstr "Vista amb filtres 2"
 
 
 ################
